Implement Generating JWT Tokens
